# zeroclaw

./: Cargo.toml
crates/zeroclaw-channels/src/orchestrator/: mod.rs
crates/zeroclaw-config/src/: schema.rs
crates/zeroclaw-nats-agent/: Cargo.toml
crates/zeroclaw-nats-agent/src/: envelope.rs  heartbeat.rs  host.rs  lib.rs  prompt.rs  sessions.rs  stream.rs  subject.rs
crates/zeroclaw-runtime/src/daemon/: mod.rs  registry.rs
docs/book/src/: SUMMARY.md
docs/book/src/channels/: nats-agent.md  overview.md
src/: main.rs
