[package]
name = "zeroclaw-nats-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Synadia Agent Protocol for NATS host for ZeroClaw."
publish = false

[dependencies]
zeroclaw-config.workspace = true
zeroclaw-log.workspace = true
zeroclaw-runtime.workspace = true
zeroclaw-api.workspace = true
anyhow = "1.0"
async-nats = { version = "0.46", default-features = true, features = ["service"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.50", default-features = false, features = ["macros", "sync", "time", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false }
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
base64 = "0.22"
parking_lot = "0.12"
